test/classes/vass/method-def-with-type-binding-error-class-1.good
method-def-with-type-binding-error-class-1.chpl:2: error: Only member methods of the innermost class/record/union (here, "C") are allowed
