test/classes/vass/method-def-with-type-binding-error-class-1.chpl
class C {
  def D.cc() {}
}
